C-CTP/src/QuantBox.C2CTP/QuantBox.C2CTP.h


//停止队列回调主动推送线程
QUANTBOXC2CTP_API void __stdcall CTP_StopMsgQueue(void* pMsgQueue);


//行情接口=======================================

//创建行情接口
QUANTBOXC2CTP_API void* __stdcall MD_CreateMdApi();

//将消息队列注册到行情接口上
QUANTBOXC2CTP_API void __stdcall MD_RegMsgQueue2MdApi(void* pMdUserApi,void* pMsgQueue);

//连接
QUANTBOXC2CTP_API void __stdcall MD_Connect(
	void* pMdUserApi,
	const char* szPath,
	const char* szAddresses,
	const char* szBrokerId,
	const char* szInvestorId,
	const char* szPassword);


//订阅合约，多个合约以“,”分隔
QUANTBOXC2CTP_API void __stdcall MD_Subscribe(void* pMdUserApi,const char* szInstrumentIDs);

//取消订阅，多个合约以“,”分隔
QUANTBOXC2CTP_API void __stdcall MD_Unsubscribe(void* pMdUserApi,const char* szInstrumentIDs);

//断开连接
QUANTBOXC2CTP_API void __stdcall MD_Disconnect(void* pMdUserApi);

//释放行情接口
QUANTBOXC2CTP_API void __stdcall MD_ReleaseMdApi(void* pMdUserApi);


//交易接口=======================================
QUANTBOXC2CTP_API void* __stdcall TD_CreateTdApi();

//将消息队列注册到交易接口上
QUANTBOXC2CTP_API void __stdcall TD_RegMsgQueue2TdApi(void* pTraderApi,void* pMsgQueue);

//连接
QUANTBOXC2CTP_API void __stdcall TD_Connect(
	void* pTraderApi,
	const char* szPath,
	const char* szAddresses,
	const char* szBrokerId,
	const char* szInvestorId,
	const char* szPassword,
	THOST_TE_RESUME_TYPE nResumeType,
	const char* szUserProductInfo,
	const char* szAuthCode);


//报单
QUANTBOXC2CTP_API int __stdcall TD_SendOrder(
	void* pTraderApi,
	const char* szInstrument,
	TThostFtdcDirectionType Direction,
	const char* szCombOffsetFlag,
	const char* szCombHedgeFlag,
	TThostFtdcVolumeType VolumeTotalOriginal,
	double LimitPrice,
	TThostFtdcOrderPriceTypeType OrderPriceType,
	TThostFtdcTimeConditionType TimeCondition,
	TThostFtdcContingentConditionType ContingentCondition,
	double StopPrice);


//撤单
QUANTBOXC2CTP_API void __stdcall TD_CancelOrder(void* pTraderApi,CThostFtdcOrderField *pOrder);


//断开连接
QUANTBOXC2CTP_API void __stdcall TD_Disconnect(void* pTraderApi);

//释放行情接口
QUANTBOXC2CTP_API void __stdcall TD_ReleaseTdApi(void* pTraderApi);

//查综合持仓
QUANTBOXC2CTP_API void __stdcall TD_ReqQryInvestorPosition(void* pTraderApi,const char* szInstrumentId);

//查持仓明细
QUANTBOXC2CTP_API void __stdcall TD_ReqQryInvestorPositionDetail(void* pTraderApi,const char* szInstrumentId);

//查资金账号
QUANTBOXC2CTP_API void __stdcall TD_ReqQryTradingAccount(void* pTraderApi);

//查合约
QUANTBOXC2CTP_API void __stdcall TD_ReqQryInstrument(void* pTraderApi,const char* szInstrumentId);

//查手续费
QUANTBOXC2CTP_API void __stdcall TD_ReqQryInstrumentCommissionRate(void* pTraderApi,const char* szInstrumentId);

//查保证金
QUANTBOXC2CTP_API void __stdcall TD_ReqQryInstrumentMarginRate(void* pTraderApi,const char* szInstrumentId,TThostFtdcHedgeFlagType HedgeFlag);