Java-CTP/Java2CTP/src/quantbox/QuantBoxLibrary.java

	/**
	 * \u505c\u6b62\u961f\u5217\u56de\u8c03\u4e3b\u52a8\u63a8\u9001\u7ebf\u7a0b<br>
	 * Original signature : <code>void CTP_StopMsgQueue(void*)</code><br>
	 * <i>native declaration : QuantBox.C2CTP.h:79</i>
	 */
	void CTP_StopMsgQueue(Pointer pMsgQueue);
	/**
	 * \u521b\u5efa\u884c\u60c5\u63a5\u53e3<br>
	 * Original signature : <code>void* MD_CreateMdApi()</code><br>
	 * <i>native declaration : QuantBox.C2CTP.h:84</i>
	 */
	Pointer MD_CreateMdApi();
	/**
	 * \u5c06\u6d88\u606f\u961f\u5217\u6ce8\u518c\u5230\u884c\u60c5\u63a5\u53e3\u4e0a<br>
	 * Original signature : <code>void MD_RegMsgQueue2MdApi(void*, void*)</code><br>
	 * <i>native declaration : QuantBox.C2CTP.h:86</i>
	 */
	void MD_RegMsgQueue2MdApi(Pointer pMdUserApi, Pointer pMsgQueue);
	/**
	 * \u8fde\u63a5<br>
	 * Original signature : <code>void MD_Connect(void*, const char*, const char*, const char*, const char*, const char*)</code><br>
	 * <i>native declaration : QuantBox.C2CTP.h:88</i><br>
	 * @deprecated use the safer methods {@link #MD_Connect(com.sun.jna.Pointer, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)} and {@link #MD_Connect(com.sun.jna.Pointer, com.sun.jna.Pointer, com.sun.jna.Pointer, com.sun.jna.Pointer, com.sun.jna.Pointer, com.sun.jna.Pointer)} instead
	 */
	@Deprecated 
	void MD_Connect(Pointer pMdUserApi, Pointer szPath, Pointer szAddresses, Pointer szBrokerId, Pointer szInvestorId, Pointer szPassword);
	/**
	 * \u8fde\u63a5<br>
	 * Original signature : <code>void MD_Connect(void*, const char*, const char*, const char*, const char*, const char*)</code><br>
	 * <i>native declaration : QuantBox.C2CTP.h:88</i>
	 */
	void MD_Connect(Pointer pMdUserApi, String szPath, String szAddresses, String szBrokerId, String szInvestorId, String szPassword);
	/**
	 * \u8ba2\u9605\u5408\u7ea6\uff0c\u591a\u4e2a\u5408\u7ea6\u4ee5\u201c,\u201d\u5206\u9694<br>
	 * Original signature : <code>void MD_Subscribe(void*, const char*)</code><br>
	 * <i>native declaration : QuantBox.C2CTP.h:97</i><br>
	 * @deprecated use the safer methods {@link #MD_Subscribe(com.sun.jna.Pointer, java.lang.String)} and {@link #MD_Subscribe(com.sun.jna.Pointer, com.sun.jna.Pointer)} instead
	 */
	@Deprecated 
	void MD_Subscribe(Pointer pMdUserApi, Pointer szInstrumentIDs);
	/**
	 * \u8ba2\u9605\u5408\u7ea6\uff0c\u591a\u4e2a\u5408\u7ea6\u4ee5\u201c,\u201d\u5206\u9694<br>
	 * Original signature : <code>void MD_Subscribe(void*, const char*)</code><br>
	 * <i>native declaration : QuantBox.C2CTP.h:97</i>
	 */
	void MD_Subscribe(Pointer pMdUserApi, String szInstrumentIDs);
	/**
	 * \u53d6\u6d88\u8ba2\u9605\uff0c\u591a\u4e2a\u5408\u7ea6\u4ee5\u201c,\u201d\u5206\u9694<br>
	 * Original signature : <code>void MD_Unsubscribe(void*, const char*)</code><br>
	 * <i>native declaration : QuantBox.C2CTP.h:99</i><br>
	 * @deprecated use the safer methods {@link #MD_Unsubscribe(com.sun.jna.Pointer, java.lang.String)} and {@link #MD_Unsubscribe(com.sun.jna.Pointer, com.sun.jna.Pointer)} instead
	 */
	@Deprecated 
	void MD_Unsubscribe(Pointer pMdUserApi, Pointer szInstrumentIDs);
	/**
	 * \u53d6\u6d88\u8ba2\u9605\uff0c\u591a\u4e2a\u5408\u7ea6\u4ee5\u201c,\u201d\u5206\u9694<br>
	 * Original signature : <code>void MD_Unsubscribe(void*, const char*)</code><br>
	 * <i>native declaration : QuantBox.C2CTP.h:99</i>
	 */
	void MD_Unsubscribe(Pointer pMdUserApi, String szInstrumentIDs);
	/**
	 * \u65ad\u5f00\u8fde\u63a5<br>
	 * Original signature : <code>void MD_Disconnect(void*)</code><br>
	 * <i>native declaration : QuantBox.C2CTP.h:101</i>
	 */
	void MD_Disconnect(Pointer pMdUserApi);
	/**
	 * \u91ca\u653e\u884c\u60c5\u63a5\u53e3<br>
	 * Original signature : <code>void MD_ReleaseMdApi(void*)</code><br>
	 * <i>native declaration : QuantBox.C2CTP.h:103</i>
	 */
	void MD_ReleaseMdApi(Pointer pMdUserApi);
	/**
	 * \u4ea4\u6613\u63a5\u53e3=======================================<br>
	 * Original signature : <code>void* TD_CreateTdApi()</code><br>
	 * <i>native declaration : QuantBox.C2CTP.h:106</i>
	 */
	Pointer TD_CreateTdApi();
	/**
	 * \u5c06\u6d88\u606f\u961f\u5217\u6ce8\u518c\u5230\u4ea4\u6613\u63a5\u53e3\u4e0a<br>
	 * Original signature : <code>void TD_RegMsgQueue2TdApi(void*, void*)</code><br>
	 * <i>native declaration : QuantBox.C2CTP.h:108</i>
	 */
	void TD_RegMsgQueue2TdApi(Pointer pTraderApi, Pointer pMsgQueue);
	/**
	 * \u8fde\u63a5<br>
	 * Original signature : <code>void TD_Connect(void*, const char*, const char*, const char*, const char*, const char*, THOST_TE_RESUME_TYPE, const char*, const char*)</code><br>
	 * <i>native declaration : QuantBox.C2CTP.h:110</i><br>
	 * @deprecated use the safer methods {@link #TD_Connect(com.sun.jna.Pointer, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, int, java.lang.String, java.lang.String)} and {@link #TD_Connect(com.sun.jna.Pointer, com.sun.jna.Pointer, com.sun.jna.Pointer, com.sun.jna.Pointer, com.sun.jna.Pointer, com.sun.jna.Pointer, int, com.sun.jna.Pointer, com.sun.jna.Pointer)} instead
	 */
	@Deprecated 
	void TD_Connect(Pointer pTraderApi, Pointer szPath, Pointer szAddresses, Pointer szBrokerId, Pointer szInvestorId, Pointer szPassword, int nResumeType, Pointer szUserProductInfo, Pointer szAuthCode);
	/**
	 * \u8fde\u63a5<br>
	 * Original signature : <code>void TD_Connect(void*, const char*, const char*, const char*, const char*, const char*, THOST_TE_RESUME_TYPE, const char*, const char*)</code><br>
	 * <i>native declaration : QuantBox.C2CTP.h:110</i>
	 */
	void TD_Connect(Pointer pTraderApi, String szPath, String szAddresses, String szBrokerId, String szInvestorId, String szPassword, int nResumeType, String szUserProductInfo, String szAuthCode);
	/**
	 * \u62a5\u5355<br>
	 * Original signature : <code>int TD_SendOrder(void*, const char*, TThostFtdcDirectionType, const char*, const char*, TThostFtdcVolumeType, double, TThostFtdcOrderPriceTypeType, TThostFtdcTimeConditionType, TThostFtdcContingentConditionType, double)</code><br>
	 * <i>native declaration : QuantBox.C2CTP.h:122</i><br>
	 * @deprecated use the safer methods {@link #TD_SendOrder(com.sun.jna.Pointer, java.lang.String, byte, java.lang.String, java.lang.String, int, double, byte, byte, byte, double)} and {@link #TD_SendOrder(com.sun.jna.Pointer, com.sun.jna.Pointer, byte, com.sun.jna.Pointer, com.sun.jna.Pointer, int, double, byte, byte, byte, double)} instead
	 */
	@Deprecated 
	int TD_SendOrder(Pointer pTraderApi, Pointer szInstrument, byte Direction, Pointer szCombOffsetFlag, Pointer szCombHedgeFlag, int VolumeTotalOriginal, double LimitPrice, byte OrderPriceType, byte TimeCondition, byte ContingentCondition, double StopPrice);
	/**
	 * \u62a5\u5355<br>
	 * Original signature : <code>int TD_SendOrder(void*, const char*, TThostFtdcDirectionType, const char*, const char*, TThostFtdcVolumeType, double, TThostFtdcOrderPriceTypeType, TThostFtdcTimeConditionType, TThostFtdcContingentConditionType, double)</code><br>
	 * <i>native declaration : QuantBox.C2CTP.h:122</i>
	 */
	int TD_SendOrder(Pointer pTraderApi, String szInstrument, byte Direction, String szCombOffsetFlag, String szCombHedgeFlag, int VolumeTotalOriginal, double LimitPrice, byte OrderPriceType, byte TimeCondition, byte ContingentCondition, double StopPrice);
	/**
	 * \u64a4\u5355<br>
	 * Original signature : <code>void TD_CancelOrder(void*, CThostFtdcOrderField*)</code><br>
	 * <i>native declaration : QuantBox.C2CTP.h:136</i>
	 */
	void TD_CancelOrder(Pointer pTraderApi, CThostFtdcOrderField pOrder);
	/**
	 * \u65ad\u5f00\u8fde\u63a5<br>
	 * Original signature : <code>void TD_Disconnect(void*)</code><br>
	 * <i>native declaration : QuantBox.C2CTP.h:139</i>
	 */
	void TD_Disconnect(Pointer pTraderApi);
	/**
	 * \u91ca\u653e\u884c\u60c5\u63a5\u53e3<br>
	 * Original signature : <code>void TD_ReleaseTdApi(void*)</code><br>
	 * <i>native declaration : QuantBox.C2CTP.h:141</i>
	 */
	void TD_ReleaseTdApi(Pointer pTraderApi);
	/**
	 * \u67e5\u7efc\u5408\u6301\u4ed3<br>
	 * Original signature : <code>void TD_ReqQryInvestorPosition(void*, const char*)</code><br>
	 * <i>native declaration : QuantBox.C2CTP.h:143</i><br>
	 * @deprecated use the safer methods {@link #TD_ReqQryInvestorPosition(com.sun.jna.Pointer, java.lang.String)} and {@link #TD_ReqQryInvestorPosition(com.sun.jna.Pointer, com.sun.jna.Pointer)} instead
	 */
	@Deprecated 
	void TD_ReqQryInvestorPosition(Pointer pTraderApi, Pointer szInstrumentId);
	/**
	 * \u67e5\u7efc\u5408\u6301\u4ed3<br>
	 * Original signature : <code>void TD_ReqQryInvestorPosition(void*, const char*)</code><br>
	 * <i>native declaration : QuantBox.C2CTP.h:143</i>
	 */
	void TD_ReqQryInvestorPosition(Pointer pTraderApi, String szInstrumentId);
	/**
	 * \u67e5\u6301\u4ed3\u660e\u7ec6<br>
	 * Original signature : <code>void TD_ReqQryInvestorPositionDetail(void*, const char*)</code><br>
	 * <i>native declaration : QuantBox.C2CTP.h:145</i><br>
	 * @deprecated use the safer methods {@link #TD_ReqQryInvestorPositionDetail(com.sun.jna.Pointer, java.lang.String)} and {@link #TD_ReqQryInvestorPositionDetail(com.sun.jna.Pointer, com.sun.jna.Pointer)} instead
	 */
	@Deprecated 
	void TD_ReqQryInvestorPositionDetail(Pointer pTraderApi, Pointer szInstrumentId);
	/**
	 * \u67e5\u6301\u4ed3\u660e\u7ec6<br>
	 * Original signature : <code>void TD_ReqQryInvestorPositionDetail(void*, const char*)</code><br>
	 * <i>native declaration : QuantBox.C2CTP.h:145</i>
	 */
	void TD_ReqQryInvestorPositionDetail(Pointer pTraderApi, String szInstrumentId);
	/**
	 * \u67e5\u8d44\u91d1\u8d26\u53f7<br>
	 * Original signature : <code>void TD_ReqQryTradingAccount(void*)</code><br>
	 * <i>native declaration : QuantBox.C2CTP.h:147</i>
	 */
	void TD_ReqQryTradingAccount(Pointer pTraderApi);
	/**
	 * \u67e5\u5408\u7ea6<br>
	 * Original signature : <code>void TD_ReqQryInstrument(void*, const char*)</code><br>
	 * <i>native declaration : QuantBox.C2CTP.h:149</i><br>
	 * @deprecated use the safer methods {@link #TD_ReqQryInstrument(com.sun.jna.Pointer, java.lang.String)} and {@link #TD_ReqQryInstrument(com.sun.jna.Pointer, com.sun.jna.Pointer)} instead
	 */
	@Deprecated 
	void TD_ReqQryInstrument(Pointer pTraderApi, Pointer szInstrumentId);
	/**
	 * \u67e5\u5408\u7ea6<br>
	 * Original signature : <code>void TD_ReqQryInstrument(void*, const char*)</code><br>
	 * <i>native declaration : QuantBox.C2CTP.h:149</i>
	 */
	void TD_ReqQryInstrument(Pointer pTraderApi, String szInstrumentId);
	/**
	 * \u67e5\u624b\u7eed\u8d39<br>
	 * Original signature : <code>void TD_ReqQryInstrumentCommissionRate(void*, const char*)</code><br>
	 * <i>native declaration : QuantBox.C2CTP.h:151</i><br>
	 * @deprecated use the safer methods {@link #TD_ReqQryInstrumentCommissionRate(com.sun.jna.Pointer, java.lang.String)} and {@link #TD_ReqQryInstrumentCommissionRate(com.sun.jna.Pointer, com.sun.jna.Pointer)} instead
	 */
	@Deprecated 
	void TD_ReqQryInstrumentCommissionRate(Pointer pTraderApi, Pointer szInstrumentId);
	/**
	 * \u67e5\u624b\u7eed\u8d39<br>
	 * Original signature : <code>void TD_ReqQryInstrumentCommissionRate(void*, const char*)</code><br>
	 * <i>native declaration : QuantBox.C2CTP.h:151</i>
	 */
	void TD_ReqQryInstrumentCommissionRate(Pointer pTraderApi, String szInstrumentId);
	/**
	 * \u67e5\u4fdd\u8bc1\u91d1<br>
	 * Original signature : <code>void TD_ReqQryInstrumentMarginRate(void*, const char*, TThostFtdcHedgeFlagType)</code><br>
	 * <i>native declaration : QuantBox.C2CTP.h:153</i><br>
	 * @deprecated use the safer methods {@link #TD_ReqQryInstrumentMarginRate(com.sun.jna.Pointer, java.lang.String, byte)} and {@link #TD_ReqQryInstrumentMarginRate(com.sun.jna.Pointer, com.sun.jna.Pointer, byte)} instead
	 */
	@Deprecated 
	void TD_ReqQryInstrumentMarginRate(Pointer pTraderApi, Pointer szInstrumentId, byte HedgeFlag);
